src/App.css
.wrapper {
  padding-bottom: 10px;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
}

.top_section {
  background-color: white;
  padding: 10px calc(7% + 5px);
  border: 1px solid #d8d9da;
  border-bottom: none;
}

.steps_section {
  background-color: #eff6ff;
  border: 1px solid #d8d9da;
}

.container {
  display: flex;
  flex-direction: column;
  margin: 30px 7%;
}

.row {
  display: flex;
  justify-content: center;
  margin: 10px 0;
}

.row-spacer {
  margin: 10px 0;
}

.column {
  display: flex;
  flex: 1;
  flex-direction: column;
  padding: 1%;
}

.center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.left {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding-left: 10px;
}

input,
select {
  background-color: white !important;
}

.input {
  flex: 1;
  margin-right: 10px;
}

.input:last-child {
  margin-right: 0;
}

.submit-button {
  flex: 1;
  margin-top: 20px !important;
}

.link {
  font-size: small;
  color: #2081f3;
  text-decoration: underline;
  cursor: pointer;
}

.disclaimer {
  font-size: small;
  font-style: italic;
  color: #6e6e6e;
  margin: 10px 0;
}

.title {
  color: #000;
  font-size: 22px !important;
  font-style: normal;
  font-weight: 600;
  line-height: 120%; /* 26.4px */
  margin-bottom: 16px;
}

.subtitle {
  color: #000;
  font-size: 15px !important;
  font-style: normal;
  font-weight: 400;
  line-height: 120%; /* 19.2px */
}

.label {
  color: #000;
  font-size: 13px !important;
  font-style: normal;
  font-weight: 400;
  line-height: 120%; /* 15.6px */
  margin-bottom: 8px;
}

.error {
  font-size: small;
  color: red;
  position: relative;
  top: -13px;
  height: 0;
}

.spinner {
  border: 4px solid rgba(0, 0, 0, 0.1);
  width: 16px;
  height: 16px;
  border-radius: 50%;
  border-left-color: #2288ff;
  animation: spin 1s linear infinite;
}

@keyframes spin {
  to {
    transform: rotate(360deg);
  }
}

